docs/GRAMMAR.ebnf
(* Union expressions *)

Statement =
	| Assignment
	| Function
	| InfixMiscellaneous;

Expression = InfixMiscellaneous;
Primary =
	| Float
	| Identifier
	| Integer
	| String;

Formatting =
	| IndentToken
	| OutdentToken
	| NewlineToken;

(* Statements *)

Assignment = Identifier {Formatting} "=" {Formatting} (Expression | Assignment);
Function = FunctionDeclaration ":" NewlineToken IndentedStatementList;
FunctionDeclaration =
	"fn"
	{Formatting}
	Identifier
	{Formatting}
	"("
	{Formatting}
	[FunctionParameters]
	{Formatting}
	")";

FunctionParameters = Identifier [{Formatting} "," {Formatting} FunctionParameters];
IndentedStatementList = {NewlineToken} [IndentToken StatementList (OutdentToken | EOF)];
StatementList;

(* Multi-token expressions *)

InfixMiscellaneous = InfixAddition {InfixMiscellaneousRight};
InfixMiscellaneousRight =
	(
		| {IndentToken | OutdentToken} Identifier {Formatting}
		| {Formatting} Identifier {IndentToken | OutdentToken}
	)
	InfixAddition;

InfixAddition = InfixMultiplication {InfixAdditionRight};
InfixAdditionRight =
	(
		| {IndentToken | OutdentToken} ("+" | "-") {Formatting}
		| {Formatting} ("+" | "-") {IndentToken | OutdentToken}
	)
	InfixMultiplication;

InfixMultiplication = Call {InfixMultiplicationRight};
InfixMultiplicationRight =
	(
		| {IndentToken | OutdentToken} ("*" | "/") {Formatting}
		| {Formatting} ("*" | "/") {IndentToken | OutdentToken}
	)
	Call;

PrefixOperation = {Operator {IndentToken | OutdentToken}} Call;
Call = Select {CallRight};
CallRight =
	| {IndentToken | OutdentToken} "(" {Formatting} [CallArguments] {Formatting} ")"
	| SelectRight;

CallArguments = Expression [{Formatting} "," {Formatting} CallArguments];
Select = Primary {SelectRight};
SelectRight = {Formatting} "." {Formatting} Identifier;

(* Single-token expressions *)

Float = FloatToken;
Identifier =
	| IdentifierToken
	| OperatorToken;

Integer = IntegerToken;
Operator = OperatorToken;
String = StringToken;
